@@ -5,29 +5,24 @@ import com.intellij.lang.ASTNode;
 import com.intellij.navigation.ItemPresentation;
 import com.intellij.psi.PsiElement;
 import com.intellij.psi.PsiFile;
-import com.intellij.psi.PsiReference;
-import com.intellij.psi.impl.source.resolve.reference.ReferenceProvidersRegistry;
 import com.intellij.psi.tree.IElementType;
-import com.intellij.util.ArrayUtil;
 import com.intellij.util.IncorrectOperationException;
 import com.kaylerrenslow.a3plugin.PluginIcons;
-import com.kaylerrenslow.a3plugin.lang.shared.PsiUtil;
-import com.kaylerrenslow.a3plugin.lang.sqf.psi.*;
-import com.kaylerrenslow.a3plugin.lang.sqf.psi.references.SQFPrivateDeclVarReference;
-import com.kaylerrenslow.a3plugin.lang.sqf.psi.references.SQFVariableReference;
+import com.kaylerrenslow.a3plugin.lang.sqf.psi.SQFPsiUtil;
+import com.kaylerrenslow.a3plugin.lang.sqf.psi.SQFTypes;
+import com.kaylerrenslow.a3plugin.lang.sqf.psi.SQFVariable;
 import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import javax.swing.*;
-import java.util.ArrayList;
 
 /**
  * @author Kayler
- * PsiElement mixin for SQF grammar file. This mixin is meant for SQFVariables
- * Created on 03/19/2016.
+ *         PsiElement mixin for SQF grammar file. This mixin is meant for SQFVariables
+ *         Created on 03/19/2016.
  */
-public class SQFVariableNamedElementMixin extends ASTWrapperPsiElement implements SQFVariableNamedElement{
+public class SQFVariableNamedElementMixin extends ASTWrapperPsiElement implements SQFVariableNamedElement {
 	private final IElementType myVariableElementType;
 
 	public SQFVariableNamedElementMixin(@NotNull ASTNode node) {
@@ -36,7 +31,7 @@ public class SQFVariableNamedElementMixin extends ASTWrapperPsiElement implement
 	}
 
 	@Override
-	public IElementType getVariableType(){
+	public IElementType getVariableType() {
 		return this.myVariableElementType;
 	}
 
@@ -44,7 +39,7 @@ public class SQFVariableNamedElementMixin extends ASTWrapperPsiElement implement
 	public ItemPresentation getPresentation() {
 		PsiFile file = this.getContainingFile();
 		PsiElement element = this;
-		return new ItemPresentation(){
+		return new ItemPresentation() {
 			@Nullable
 			@Override
 			public String getPresentableText() {
@@ -65,45 +60,42 @@ public class SQFVariableNamedElementMixin extends ASTWrapperPsiElement implement
 		};
 	}
 
-	@NotNull
-	@Override
-	public PsiReference[] getReferences() {
-		if(myVariableElementType == SQFTypes.LANG_VAR){
-			return new PsiReference[]{getReference()};
-		}
-		PsiReference[] references;
-		if(myVariableElementType == SQFTypes.GLOBAL_VAR){
-			references= ReferenceProvidersRegistry.getReferencesFromProviders(this);
-		}else{
-			SQFVariable me = ((SQFVariable) this);
-			SQFScope varScope = me.getDeclarationScope();
-			ArrayList<ASTNode> nodes = PsiUtil.findDescendantElements(me.getContainingFile(), SQFTypes.PRIVATE_DECL_VAR, null, "\"" + me.getVarName() + "\"");
-			ArrayList<PsiElement> declVarsMatchedScope = new ArrayList<>();
-			for (int i = 0; i < nodes.size(); i++){
-				if(varScope == SQFPsiUtil.getContainingScope(nodes.get(i).getPsi())){
-					declVarsMatchedScope.add(nodes.get(i).getPsi());
-				}
-			}
-
-			references = new PsiReference[declVarsMatchedScope.size()];
-			PsiElement ele;
-			for (int i = 0; i < declVarsMatchedScope.size(); i++){
-				ele = declVarsMatchedScope.get(i);
-				references[i] = new SQFPrivateDeclVarReference(me, (SQFPrivateDeclVar)ele);
-			}
-		}
-		return ArrayUtil.prepend(getReference(), references);
-	}
-
-
-	@Override
-	public PsiReference getReference() {
-		return new SQFVariableReference(this, myVariableElementType);
-	}
+//	@NotNull
+//	@Override
+//	public PsiReference[] getReferences() {
+//		if (myVariableElementType == SQFTypes.LANG_VAR) {
+//			return new PsiReference[0];
+//		}
+//		PsiReference[] references;
+//		if (myVariableElementType == SQFTypes.GLOBAL_VAR) {
+//			references = ReferenceProvidersRegistry.getReferencesFromProviders(this);
+//		} else {
+//			SQFVariable me = ((SQFVariable) this);
+//			SQFScope varScope = me.getDeclarationScope();
+//			ArrayList<ASTNode> nodes = PsiUtil.findDescendantElements(me.getContainingFile(), SQFTypes.PRIVATE_DECL_VAR, null, "\"" + me.getVarName() + "\"");
+//			ArrayList<PsiElement> declVarsMatchedScope = new ArrayList<>();
+//			for (int i = 0; i < nodes.size(); i++) {
+//				if (varScope == SQFPsiUtil.getContainingScope(nodes.get(i).getPsi())) {
+//					declVarsMatchedScope.add(nodes.get(i).getPsi());
+//				}
+//			}
+//
+//			references = new PsiReference[declVarsMatchedScope.size()];
+//			for (int i = 0; i < declVarsMatchedScope.size(); i++) {
+//				references[i] = new SQFLocalVarReference(me, (SQFPrivateDeclVar) declVarsMatchedScope.get(i));
+//			}
+//		}
+//		return references;
+//	}
+//
+//	@Override
+//	public PsiReference getReference() {
+//		return getReferences()[0];
+//	}
 
 	@Override
 	public String toString() {
-		return this.getName();
+		return "SQFVariableNamedElementMixin{" + this.getName() + "}";
 	}
 
 	@Nullable
@@ -119,13 +111,12 @@ public class SQFVariableNamedElementMixin extends ASTWrapperPsiElement implement
 
 	@Override
 	public PsiElement setName(@NonNls @NotNull String name) throws IncorrectOperationException {
-		if(myVariableElementType == SQFTypes.LANG_VAR){
+		if (myVariableElementType == SQFTypes.LANG_VAR) {
 			throw new IncorrectOperationException("This variable can not be renamed.");
 		}
-		ASTNode me = this.getNode();
-		SQFVariable var = SQFPsiUtil.createVariable(this.getProject(), name);
-		me.getTreeParent().replaceChild(me, var.getNode());
-		return var;
+		SQFVariable newVar = SQFPsiUtil.createVariable(this.getProject(), name);
+		this.getParent().getNode().replaceChild(this.getNode(), newVar.getNode());
+		return newVar;
 	}
 
 	@Override
