@@ -5,7 +5,9 @@ shared between languages
 	none
 
 SQF
-	none
+	FIXED: annotator: when private decl var is updated, variables aren't correctly checking if they are declared private or not. Their containing scope appear to be caching private decl var list.
+	        I fixed this by NOT STORING THE VAR NAME and instead fetching it from node.getText
+	fixed references!!!!
 
 Header
     none
